--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "heroes",
   "version": "1.0.0",
-  "description": "",
+  "description": "Trabajo Practico de Heroinas y Heroes tecnologicos",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon app.js"
   },
   "repository": {
     "type": "git",
